yamls/ingress/nginx/botique-frontend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: botique
 namespace: microservices
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    
spec:
 rules:
 - host: botique.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: frontend
           port:
             number: 80
