yamls/ingress/nginx/eureka.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: eureka
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
   nginx.ingress.kubernetes.io/rewrite-target: /$2
   kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: eureka.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: eureka
           port:
             number: 8761
