yamls/ingress/nginx/example_certmanager.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test
 annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: rvt.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx 
           port:
             number: 80
 tls:
    - hosts:
      - rvt.test.com
      secretName: test-cert
