yamls/ingress/nginx/grafana_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
   kubernetes.io/ingress.class: "haproxy"
spec:
 rules:
 - host: grafana.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: prometheus-grafana
           port:
             number: 80
