yamls/ingress/nginx/grafana_simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: grafana
 namespace: kubeapps
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: grafana.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: grafana 
           port:
             number: 3000
