yamls/ingress/nginx/haproxy.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
   kubernetes.io/ingress.class: "haproxy"
spec:
 rules:
 - host: hpa.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: php-apache
           port:
             number: 80
