yamls/ingress/nginx/haproxy_ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
   kubernetes.io/ingress.class: "haproxy"
   kubernetes.io/tls-acme: "true"
spec:
 rules:
 - host: rockvillegroup.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx-svc 
           port:
             number: 80
 tls:
  - hosts:
    - rockvillegroup.com
    secretName: rockvillegroup
