yamls/ingress/nginx/helloworld-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  annotations:
          #    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    #    kubernetes.io/tls-acme: "true"
    #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #  nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: farhanali.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: aks-helloworld
            port:
              name: http
