yamls/ingress/nginx/kiali.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: kiali
 namespace: istio-system
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    
spec:
 rules:
 - host: dcbapp.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: kiali
           port:
             number: 20001
