yamls/ingress/nginx/kubemq-dashborad.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test
 annotations:
         #   nginx.ingress.kubernetes.io/app-root: /rootapp
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: rvt.kubemq.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: kubemq-dashboard
           port:
             number: 3000
