yamls/ingress/nginx/longhorn.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: longhorn-frontend
 namespace: longhorn-system
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    
spec:
 rules:
 - host: test.ropay.pk
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: longhorn-frontend
           port:
             number: 80
