yamls/ingress/nginx/springapp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: spring-app
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    
spec:
 rules:
 - host: dcbapp.com
   http:
     paths:
     - path: /spring(/|$)(.*)
       pathType: Prefix
       backend:
         service:
           name: spring-app
           port:
             number: 8090
