yamls/ingress/nginx/test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: rvt.test.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: nginx-deploy
           port:
             number: 80
