yamls/ingress/nginx/test2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
  annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
       kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dcbapp.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port:
              number: 80
